moved files around x 2

--- a/peta.html
+++ b/peta.html
@@ -14,9 +14,9 @@
 
 <h2>Howto be peta</h2>
 
-<img src="thirstypeta.jpg" alt="Nice lookin water"/>
+<img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
 
-<p><a href="http://www.mrwallpaper.com/wallpapers/forest-trees-waterfall.jpg" Peta</a> has blonde hair</p>
+<p><a href="http://www.mrwallpaper.com/wallpapers/forest-trees-waterfall.jpg"> Peta</a> has blonde hair</p>
 
 <h3> Peta life at home</h3>
 
