no idea what im doing

--- a/peta.html
+++ b/peta.html
@@ -16,7 +16,7 @@
 
 <img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
 
-<p><a href="images/http://www.mrwallpaper.com/wallpapers/forest-trees-waterfall.jpg">Peta</a> has blonde hair</p>
+<p><a href="/http://www.mrwallpaper.com/wallpapers/forest-trees-waterfall.jpg">Peta</a> has blonde hair</p>
 
 <h3> Peta life at home</h3>
 
