--- a/About/Index.html
+++ b/About/Index.html
@@ -9,7 +9,7 @@
 <body>
 <nav>
 	<u1>
-		<li><a href="/peta.html">peta</a></li>
+		<li><a href="/josh389589.github.io/peta.html">peta</a></li>
 		<li>contact us</li>
 	
 	
