--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Ohya 
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<title>peta is cool</title>
+</head>
+
+<body>
+
+<h1>This page is for peta</h1>
+
+<p>Hello peta dorkson</p>
+
+<h2>Howto be peta</h2>
+
+<img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
+
+<p><a href="/http://www.mrwallpaper.com/wallpapers/forest-trees-waterfall.jpg">Peta</a> has blonde hair</p>
+
+<h3> Peta life at home</h3>
+
+<p>Peta has a twin aleks</p>
+
+<p>Peta has a brother lyle the crocodyle</p>
+
+
+
+</body>
+
+
+
+</html>
