--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-
+<nav>
+	<u1>
+		<li><a href="about/index.html">about us</a></li>
+		<li>contact us</li>
+	
+	
+	</u1>
+	
+	
 <h1>This page is for peta</h1>
 
 <p>Hello peta dorkson</p>
@@ -16,8 +24,6 @@
 <h2>Howto be peta</h2>
 
 <img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
-
-<p><a href="/http://www.mrwallpaper.com/wallpapers/forest-trees-waterfall.jpg">Peta</a> has blonde hair</p>
 
 <h3> Peta life at home</h3>
 
