Fixed all issues with base html

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Peta</title>
+	<title>Contact Peta</title>
 	<link rel="stylesheet" href="../css/mainred.css" />
 </head>
 
@@ -10,7 +10,7 @@
 <nav>
 	<u1>
 		<li><a href="../index.html">peta</a></li>
-		<li><a href="../contact/index.html">contact peta</a></li>
+		<li><a href="../about/index.html">about us</a></li>
 	
 	
 	</u1>
@@ -21,10 +21,10 @@
 <h1>About Peta</h1>
 
 
-<img src="../images/peta.jpg" alt="Nice lookin Pic of Peta"/>
+<img src="../images/peta.jpg" alt="Nice lookin Pic of Peta again"/>
 
 
-<p>We are Peta people who want to know about Peta</p>
+<p>you can contact peta by calling him on his banana phone</p>
 
 
 </body>
