--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
 <nav>
 	<u1>
 		<li><a href="about/index.html">about us</a></li>
-		<li>contact us</li>
+		<li><a href="contact/index.html">contact peta</a></li>
 	
 	
 	</u1>
-	
-	
+</nav>
+
 <h1>This page is for peta</h1>
 
-<p>Hello peta dorkson</p>
+<div id="mainContent"	
 
-<h2>Howto be peta</h2>
+	<p>Hello peta dorkson</p>
 
-<img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
+	<h2>Howto be peta</h2>
 
-<h3> Peta life at home</h3>
+	<img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
 
-<p>Peta has a twin aleks</p>
+	<h3> Peta life at home</h3>
 
-<p>Peta has a brother lyle the crocodyle</p>
+	<p>Peta has a twin aleks</p>
+
+	<p>Peta has a brother lyle the crocodyle</p>
+
+</div>
 
 
 
