--- a/contact/index.html
+++ b/contact/index.html
@@ -21,10 +21,10 @@
 <h1>About Peta</h1>
 
 
-<img src="../images/peta.jpg" alt="Nice lookin Pic of Peta again"/>
+<img src="../images/peta2.jpg" alt="Nice lookin Pic of Peta snowboarding"/>
 
 
-<p>you can contact peta by calling him on his banana phone</p>
+<p>you can contact peta by going to the mountains to find him snowboard</p>
 
 
 </body>
