--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<h2>Howto be peta</h2>
 
-	<img src="images/thirstypeta.jpg" alt="Nice lookin water"/>
+	<img src="images/peta3.jpg" alt="Nice lookin water"/>
 
 	<h3> Peta life at home</h3>
 
