--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <nav>
 	<u1>
-		<li><a href="about/index.html">about us</a></li>
+		<li><a href="about/aboutpage.html">about us</a></li>
 		<li><a href="contact/index.html">contact peta</a></li>
 	
 	
