--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
 <nav>
 	<u1>
 		<li><a href="../index.html">peta</a></li>
-		<li><a href="../about/index.html">about us</a></li>
+		<li><a href="../about/aboutpage.html">about us</a></li>
 	
 	
 	</u1>
