--- a/about/aboutpage.html
+++ b/about/aboutpage.html
@@ -21,7 +21,7 @@
 <h1>About Peta</h1>
 
 
-<img src="../images/peta.jpg" alt="Nice lookin Pic of Peta"/>
+<img src="../images/peta1.jpg" alt="Nice lookin Pic of Peta"/>
 
 
 <p>We are Peta people who want to know about Peta</p>
