minor fixes/changes

--- a/contact/index.html
+++ b/contact/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+
 	<title>Contact Peta</title>
 	<link rel="stylesheet" href="../css/mainred.css" />
+	
 </head>
 
-
 <body>
+
 <nav>
+
 	<u1>
 		<li><a href="../index.html">peta</a></li>
 		<li><a href="../about/aboutpage.html">about us</a></li>
@@ -15,17 +20,15 @@
 	
 	</u1>
 
-
-
 </nav>
-<h1>About Peta</h1>
 
+<h1>About Peta</h1>
 
 <img src="../images/peta2.jpg" alt="Nice lookin Pic of Peta snowboarding"/>
 
-
 <p>you can contact peta by going to the mountains to find him snowboard</p>
 
+</div>
 
 </body>
 
