--- a/about/aboutpage.html
+++ b/about/aboutpage.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
+
 	<title>About Peta</title>
 	<link rel="stylesheet" href="../css/mainred.css" />
+	
 </head>
 
 
 <body>
+
 <nav>
 	<u1>
 		<li><a href="../index.html">peta</a></li>
@@ -20,12 +24,11 @@
 
 <h1>About Peta</h1>
 
-
 <img src="../images/peta1.jpg" alt="Nice lookin Pic of Peta"/>
-
 
 <p>We are Peta people who want to know about Peta</p>
 
+</div>
 
 </body>
 
