--- a/contact/index.html
+++ b/contact/index.html
@@ -13,20 +13,22 @@
 
 <nav>
 
-	<u1>
+	<ul>
 		<li><a href="../index.html">peta</a></li>
 		<li><a href="../about/aboutpage.html">about us</a></li>
 	
 	
-	</u1>
+	</ul>
 
 </nav>
 
 <h1>About Peta</h1>
 
-<img src="../images/peta2.jpg" alt="Nice lookin Pic of Peta snowboarding"/>
+<div id="mainContent"
 
-<p>you can contact peta by going to the mountains to find him snowboard</p>
+	<img src="../images/peta2.jpg" alt="Nice lookin Pic of Peta snowboarding"/>
+
+	<p>you can contact peta by going to the mountains to find him snowboard</p>
 
 </div>
 
