basic responsive code

--- a/about/aboutpage.html
+++ b/about/aboutpage.html
@@ -5,6 +5,7 @@
 <head>
 
 	<title>About Peta</title>
+	<meta name="viewport" content="width=divice-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/mainred.css" />
 	
 </head>
