--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 
 	<title>peta is cool</title>
+	<meta name="viewport" content="width=divice-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/mainred.css" />
 	
 </head>
