--- a/about/aboutpage.html
+++ b/about/aboutpage.html
@@ -25,9 +25,11 @@
 
 <h1>About Peta</h1>
 
-<img src="../images/peta1.jpg" alt="Nice lookin Pic of Peta"/>
+<div id="mainContent"
 
-<p>We are Peta people who want to know about Peta</p>
+	<img src="../images/peta1.jpg" alt="Nice lookin Pic of Peta"/>
+
+	<p>We are Peta people who want to know about Peta</p>
 
 </div>
 
