--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<h2>Howto be peta</h2>
 
-	<img src="images/peta3.jpg" alt="Nice lookin water"/>
+	<img class="zoomed" src="images/peta3.jpg" alt="Nice lookin water"/>
 
 	<h3> Peta life at home</h3>
 
